[package]
name = "cloudflare-ddns-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11",features=["json"]}
tokio = {version="1.26.0",features=["full"]}
serde_json = "1.0"
serde = {version="1.0",features=["derive"]}
anyhow = "1.0.69"
chrono = "0.4.23"
toml = "0.7.2"
